<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>net.java</groupId>
        <artifactId>jvnet-parent</artifactId>
        <version>3</version>
    </parent>

    <artifactId>coherence-stuff</artifactId>
    <groupId>com.thegridman.coherence</groupId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Coherence Examples</name>


    <licenses>
        <license>
            <name>Common Development and Distribution License 1.0 ("CDDL")</name>
            <url>http://opensource.org/licenses/CDDL-1.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>


    <modules>
        <module>coherence-twelve-one-two</module>
        <module>coherence-three-seven</module>
        <module>coherence-inc-eleven</module>
        <module>coherence-inc-twelve</module>
    </modules>

    <properties>
        <!-- project options -->
        <skip-sign-artifacts>true</skip-sign-artifacts>

        <!-- source encoding definition -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- plugin dependency versions (alphabetically) -->
        <doxia.module.markdown.version>1.0</doxia.module.markdown.version>
        <github.site.maven.plugin.version>0.7</github.site.maven.plugin.version>
        <maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
        <maven.dependency.plugin.version>2.6</maven.dependency.plugin.version>
        <maven.deploy.plugin.version>2.7</maven.deploy.plugin.version>
        <maven.enforcer.plugin.version>1.0.1</maven.enforcer.plugin.version>
        <maven.gpg.plugin.version>1.4</maven.gpg.plugin.version>
        <maven.jar.plugin.version>2.4</maven.jar.plugin.version>
        <maven.javadoc.plugin.version>2.9</maven.javadoc.plugin.version>
        <maven.release.plugin.version>2.2.1</maven.release.plugin.version>
        <maven.shade.plugin.version>1.7</maven.shade.plugin.version>
        <maven.site.plugin.version>3.2</maven.site.plugin.version>
        <maven.source.plugin.version>2.1.2</maven.source.plugin.version>
        <maven.surefire.plugin.version>2.13</maven.surefire.plugin.version>

        <!-- dependency versions (alphabetically) -->
        <avro.version>1.11.3</avro.version>
        <activemq.version>5.3.1</activemq.version>
        <amazonaws.version>1.3.14</amazonaws.version>
        <cglib.version>2.2.2</cglib.version>
        <cli.version>1.2</cli.version>
        <easymock.version>3.1</easymock.version>
        <gson.version>2.2.4</gson.version>
        <gozzira.version>0.4.1</gozzira.version>
        <hamcrest.version>1.3</hamcrest.version>
        <javax.jms.version>1.1</javax.jms.version>
        <joda.time.version>2.3</joda.time.version>
        <junit.version>4.13.1</junit.version>
        <miglayout.version>3.6</miglayout.version>
        <mockito.version>1.9.0</mockito.version>
        <oracle.nosql.version>2.1.8</oracle.nosql.version>
        <oracle.tools.version>1.0.1-SNAPSHOT</oracle.tools.version>
    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>com.oracle.kv</groupId>
                <artifactId>kv-client</artifactId>
                <version>${oracle.nosql.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.kv</groupId>
                <artifactId>kv-coherence</artifactId>
                <version>${oracle.nosql.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.kv</groupId>
                <artifactId>kv-store</artifactId>
                <version>${oracle.nosql.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.avro</groupId>
                <artifactId>avro</artifactId>
                <version>${avro.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.activemq</groupId>
                <artifactId>activemq-all</artifactId>
                <version>${activemq.version}</version>
            </dependency>

            <dependency>
                <groupId>commons-cli</groupId>
                <artifactId>commons-cli</artifactId>
                <version>${cli.version}</version>
            </dependency>

            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>

            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>${joda.time.version}</version>
            </dependency>

            <dependency>
                <groupId>net.ser1.gozzira</groupId>
                <artifactId>gozzira</artifactId>
                <version>${gozzira.version}</version>
            </dependency>

            <dependency>
                <groupId>com.oracle.tools</groupId>
                <artifactId>oracle-tools-core</artifactId>
                <version>${oracle.tools.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.tools</groupId>
                <artifactId>oracle-tools-runtime</artifactId>
                <version>${oracle.tools.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.tools</groupId>
                <artifactId>oracle-tools-coherence</artifactId>
                <version>${oracle.tools.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.tools</groupId>
                <artifactId>oracle-tools-testing-support</artifactId>
                <version>${oracle.tools.version}</version>
            </dependency>

            <dependency>
           		<groupId>junit</groupId>
           		<artifactId>junit</artifactId>
           		<version>${junit.version}</version>
           	</dependency>

           	<dependency>
           		<groupId>org.mockito</groupId>
           		<artifactId>mockito-all</artifactId>
           		<version>${mockito.version}</version>
           	</dependency>

            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-core</artifactId>
                <version>${hamcrest.version}</version>
            </dependency>

            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-library</artifactId>
                <version>${hamcrest.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>${maven.deploy.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source.plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.javadoc.plugin.version}</version>
                <configuration>
                    <failOnError>false</failOnError>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.enforcer.plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-plugin-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.0.4</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>1.6.0</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <argLine>-Xms800m -Xmx800m -XX:MaxPermSize=500m</argLine>
                    <includes>
                        <include>**/*FunctionalTest.java</include>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                    </includes>
                    <useSystemClassLoader>true</useSystemClassLoader>
                    <useManifestOnlyJar>false</useManifestOnlyJar>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven.deploy.plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven.release.plugin.version}</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven.gpg.plugin.version}</version>
                <configuration>
                    <skip>${skip-sign-artifacts}</skip>
                </configuration>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>